--- a/package.json
+++ b/package.json
@@ -12,3 +12,15 @@
     "./cli/*.{js,css,md}": "yarn cli:format"
   }
 }
+
+{
+  "$schema": "https://railway.app/railway.schema.json",
+  "build": {
+    "builder": "DOCKERFILE",
+    "dockerfilePath": "Dockerfile"
+  },
+  "deploy": {
+    "restartPolicyType": "ON_FAILURE",
+    "restartPolicyMaxRetries": 10
+  }
+}
